
	- fixed CAPI change that broke 64-bit platforms
	- use Z ordinate in reprojections
	- spatial_ref_sys.sql updated to EPSG 6.11.1 
        - Simplified Version.config infrastructure to use a single
          pack of version variables for everything.
        - Include the Version.config in loader/dumper USAGE messages
        - Replace hand-made, fragile JDBC version parser with Properties
        - loader/dumper: fixed regression tests and usage output


PostGIS 1.1.5
2006/10/13
	- Java:
	  - Removed obsolete synchronization from Jts code.
	  - fixed nullpointer Exception in Geometry.equals() method
          - Added EJB3Spatial.odt to fulfill the GPL requirement of
            distributing the "preferred form of modification"
	- Added -S option for non-multi geometries to shp2pgsql
	- Updated heavily outdated README files for shp2pgsql/pgsql2shp by 
	  merging them with the manpages.
	- Fixed MingW link error that was causing pgsql2shp to
	  segfault on Win32 when compiled for PostgreSQL 8.2

PostGIS 1.1.4
2006/09/27
	- Fixed support for PostgreSQL 8.2
	- Fixed bug in collect() function discarding SRID of
	  input
	- Added SRID match check in MakeBox2d and MakeBox3d
	- Fixed regress tests to pass with GEOS-3.0.0
	- Improved pgsql2shp run concurrency.
	- Java:
		- reworked JTS support to reflect new upstream
		  JTS developers' attitude to SRID handling.
		  Simplifies code and drops build depend on GNU trove.
		- Added EJB2 support generously donated by the
		  "Geodetix s.r.l. Company" http://www.geodetix.it/
		- Added EJB3 tutorial / examples donated by
		  Norman Barker <nbarker@ittvis.com>
		- Reorganized java directory layout a little.

PostGIS 1.1.3
2006/06/30

	- NEW Long Transactions support.
	- Can run the regress tests with 'make check' now.
	- New regress test support for loader/dumper.
	- BUGFIX in pgsql2shp successful return code.
	- BUGFIX in shp2pgsql handling of MultiLine WKT.
	- BUGFIX in affine() failing to update bounding box.